<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_pink"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="291dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/img_home_top" />

        <TextView
            android:id="@+id/home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_name"
            android:textColor="@color/text_color"
            android:textSize="24dp"
            app:fontFamily="@font/inter_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0"
            app:textAllCaps="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_services"
        android:onClick="onClick"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/button_services"
        android:textColor="@color/text_color"
        app:backgroundTint="@color/background_pink"
        app:cornerRadius="24dp"
        app:icon="@drawable/icon_services"
        app:iconTint="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        app:toggleCheckedStateOnClick="false" />

    <Button
        android:id="@+id/button_appointments"
        android:onClick="onClick"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:text="@string/button_appointments"
        android:textColor="@color/text_color"
        app:backgroundTint="@color/background_pink"
        app:cornerRadius="24dp"
        app:icon="@drawable/icon_appointments"
        app:iconTint="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_services"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        app:toggleCheckedStateOnClick="false" />

    <Button
        android:id="@+id/button_masters"
        android:onClick="onClick"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="7dp"
        android:text="@string/button_masters"
        android:textColor="@color/text_color"
        app:backgroundTint="@color/background_pink"
        app:cornerRadius="24dp"
        app:icon="@drawable/icon_masters"
        app:iconTint="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_appointments"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        app:toggleCheckedStateOnClick="false" />

    <Button
        android:id="@+id/button_profile"
        android:onClick="onClick"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="7dp"
        android:text="@string/button_profile"
        android:textColor="@color/text_color"
        app:backgroundTint="@color/background_pink"
        app:cornerRadius="24dp"
        app:icon="@drawable/icon_profile"
        app:iconTint="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_masters"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        app:toggleCheckedStateOnClick="false" />

    <TextView
        android:id="@+id/text_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textColor="@color/text_color"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_profile"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/text_address"
        app:layout_constraintTop_toBottomOf="@+id/text_address"
        app:layout_constraintVertical_bias="0.107" />

    <ImageView
        android:id="@+id/image_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_address"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_profile"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/icon_location" />

    <ImageView
        android:id="@+id/image_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_phone"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_phone"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon_phone" />


    <ImageButton
        android:id="@+id/image_call"
        android:onClick="onClick"
        android:layout_width="143dp"
        android:layout_height="39dp"
        android:layout_marginTop="2dp"
        app:backgroundTint="@color/green"
        app:cornerRadius="24dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_phone"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon_phone"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_call"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/button_home_bottom"
            android:onClick="onClick"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/icon_home" />

        <ImageButton
            android:id="@+id/button_masters_bottom"
            android:onClick="onClick"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/icon_masters" />

        <ImageButton
            android:id="@+id/button_services_bottom"
            android:onClick="onClick"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_services" />

        <ImageButton
            android:id="@+id/button_appointments_bottom"
            android:onClick="onClick"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.722"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/icon_appointments" />

        <ImageButton
            android:id="@+id/button_profile_bottom"
            android:onClick="onClick"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.919"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/icon_profile" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>